Cloudformation/infrastructure/1-ecs-fargate-cluster.yml
AWSTemplateFormatVersion: 2010-09-09
Description: An example CloudFormation creating Fargate ECS Cluster.

Parameters:
  EnvironmentName:
    Type: String
    Default: prod
    AllowedValues:
      - qa      
      - prod
    Description: "A friendly environment name that will be used for namespacing all cluster resources. Example: staging, qa, or production"
  VPC:
    Type: AWS::EC2::VPC::Id
  SubnetA:
    Type: AWS::EC2::Subnet::Id
  SubnetB:
    Type: AWS::EC2::Subnet::Id

Resources:

  # Create an ECS Cluster
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Join ['-', [!Ref EnvironmentName, 'Cluster']]    


  HttpLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Http-Https-LoadBalancerSecurityGroup
      VpcId: !ImportValue 'VPC'
      SecurityGroupIngress:
      ## Allows port 443
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      ## Allows port 80   
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0         
      ## Outbound rules    
      # SecurityGroupEgress:
      #   - IpProtocol: tcp
      #     FromPort: 80
      #     ToPort: 80
      #     CidrIp: 0.0.0.0/0        

# These are the values output by the CloudFormation template. Be careful
# about changing any of them, because of them are exported with specific
# names so that the other task related CF templates can use them.
Outputs:

  ClusterName:
    Description: The name of the ECS cluster
    Value: !Ref 'ECSCluster'
    Export:
      Name: !Sub ${EnvironmentName}:ClusterName      

  VPC:
    Description: VPC
    Value: !Ref VPC
    Export:
      Name: 'VPC'

  SubnetA:
    Description: 'Subnet A on AZ1'
    Value: !Ref SubnetA
    Export:
      Name: 'SubnetA'

  SubnetB:
    Description: 'Subnet B on AZ2'
    Value: !Ref SubnetB
    Export:
      Name: 'SubnetB' 

  HttpLoadBalancerSecurityGroup:
    Description: 'Http Https Loadbalancer Security Group'
    Value: !Ref HttpLoadBalancerSecurityGroup
    Export:
      Name: 'HttpSecurityGroup'
